# pattern-chunk-rag

./: .gitignore  README.md  REASONING.md  main.py  pyproject.toml
.pipeline_cache/: file_manifest.json
data/: ab_testing_verification.txt  accessibility_verification.txt  analytics_pricing.txt  carrier_relationships.txt  coffee_roasting_basics.txt  conversion_funnel_analysis.txt  customer_feedback.txt  eng_rate_limits.txt  hummingbird_field_notes.txt  international_verification.txt  marketing_activation.txt  mobile_verification_study.txt  office_plants_guide.txt  ops_billing_postmortem.txt  product_verification.txt  release_notes_ui.txt  security_compliance_verification.txt  sms_provider_analysis.txt  support_tickets_activation.txt  team_building_activities.txt  user_onboarding_research.txt  verification_analytics.txt  verification_optimization.txt  verification_ux_improvements.txt
src/: change_tracker.py  chunker.py  config.py  extractor.py  grouper.py  kg_builder.py  labeler_agent.py  lightrag_client.py  promoter_agent.py  utils.py
src/prompts/: __init__.py  prompts.py
tests/: test_full_integration.py  test_incremental_processing.py
