[project]
name = "pareto-rag"
version = "0.1.0"
description = "RAG chunking pipeline for identifying & representing abstract multi-document patterns"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.0",
    "tiktoken>=0.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "lightrag-hku>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
